# kpipewire

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  PipeWireSourceItem.cpp  PipeWireSourceItem.h  PipeWireSourceStream.cpp  PipeWireSourceStream.h  PipelineItem.cpp  PipelineItem.h  PlasmaRecordMe.cpp  PlasmaRecordMe.h  README.md  RecordMe.cpp  RecordMe.h  kpipewire.kdev4  main.cpp  main.qml  metainfo.yaml  org.freedesktop.portal.ScreenCast.xml  org.kde.recordme.desktop.cmake  pipewirestream.cpp  pipewirestream.h  screencasting.cpp  screencasting.h  xdgrecordme.kdev4  xdp-main.cpp
autotests/: CMakeLists.txt  TestAudioEncoder.cpp  TestEncoder.cpp
libkpipewire/: CMakeLists.txt  KPipeWireConfig.cmake.in  kpipewiredeclarativeplugin.cpp  kpipewiredeclarativeplugin.h  kpipewirerecorddeclarativeplugin.cpp  kpipewirerecorddeclarativeplugin.h  pipewirecore.cpp  pipewirecore.h  pipewirerecord.cpp  pipewirerecord.h  pipewirerecord_p.h  pipewiresourceitem.cpp  pipewiresourceitem.h  pipewiresourcestream.cpp  pipewiresourcestream.h  screencasting.cpp  screencasting.h  screencastingrequest.cpp  screencastingrequest.h
po/ar/: kpipewire5.po  kpipewire6.po
po/ast/: kpipewire5.po  kpipewire6.po
po/bg/: kpipewire6.po
po/ca/: kpipewire5.po  kpipewire6.po
po/ca@valencia/: kpipewire5.po  kpipewire6.po
po/cs/: kpipewire5.po  kpipewire6.po
po/de/: kpipewire5.po  kpipewire6.po
po/en_GB/: kpipewire5.po  kpipewire6.po
po/eo/: kpipewire5.po  kpipewire6.po
po/es/: kpipewire5.po  kpipewire6.po
po/eu/: kpipewire5.po  kpipewire6.po
po/fi/: kpipewire5.po  kpipewire6.po
po/fr/: kpipewire5.po  kpipewire6.po
po/ga/: kpipewire5.po  kpipewire6.po
po/gl/: kpipewire5.po  kpipewire6.po
po/he/: kpipewire5.po  kpipewire6.po
po/hi/: kpipewire6.po
po/hu/: kpipewire6.po
po/ia/: kpipewire5.po  kpipewire6.po
po/id/: kpipewire5.po  kpipewire6.po
po/is/: kpipewire6.po
po/it/: kpipewire5.po  kpipewire6.po
po/ja/: kpipewire5.po  kpipewire6.po
po/ka/: kpipewire5.po  kpipewire6.po
po/ko/: kpipewire5.po  kpipewire6.po
po/lt/: kpipewire5.po  kpipewire6.po
po/lv/: kpipewire6.po
po/nl/: kpipewire5.po  kpipewire6.po
po/nn/: kpipewire5.po  kpipewire6.po
po/pa/: kpipewire5.po  kpipewire6.po
po/pl/: kpipewire5.po  kpipewire6.po
po/pt/: kpipewire5.po  kpipewire6.po
po/pt_BR/: kpipewire5.po  kpipewire6.po
po/ro/: kpipewire5.po  kpipewire6.po
po/ru/: kpipewire5.po  kpipewire6.po
po/sa/: kpipewire6.po
po/sk/: kpipewire5.po  kpipewire6.po
po/sl/: kpipewire5.po  kpipewire6.po
po/sv/: kpipewire5.po  kpipewire6.po
po/ta/: kpipewire5.po  kpipewire6.po
po/tr/: kpipewire5.po  kpipewire6.po
po/ug/: kpipewire6.po
po/uk/: kpipewire5.po  kpipewire6.po
po/zh_CN/: kpipewire5.po  kpipewire6.po
po/zh_TW/: kpipewire5.po  kpipewire6.po
src/: CMakeLists.txt  KPipeWireConfig.cmake.in  Messages.sh  aacencoder.cpp  aacencoder_p.h  audioconstants_p.h  audioencoder.cpp  audioencoder_p.h  dmabufhandler.cpp  dmabufhandler.h  encoder.cpp  encoder.h  encoder_p.h  gifencoder.cpp  gifencoder_p.h  glhelpers.cpp  glhelpers.h  h264nvencencoder.cpp  h264nvencencoder_p.h  h264vaapiencoder.cpp  h264vaapiencoder.h  h264vaapiencoder_p.h  h264vulkanencoder.cpp  h264vulkanencoder_p.h  kpipewiredeclarativeplugin.cpp  kpipewirerecorddeclarativeplugin.cpp  kpipewirerecorddeclarativeplugin.h  libopenh264encoder.cpp  libopenh264encoder_p.h  libopusencoder.cpp  libopusencoder_p.h  libvpxencoder.cpp  libvpxencoder.h  libvpxencoder_p.h  libvpxvp9encoder.cpp  libvpxvp9encoder_p.h  libwebpencoder.cpp  libwebpencoder_p.h  libx264encoder.cpp  libx264encoder.h  (+31 more)
src/monitors/: CMakeLists.txt  mediamonitor.cpp  mediamonitor.h
src/monitors/autotests/: mediamonitortest.cpp  mediamonitortest.qml
tests/: CMakeLists.txt  HeadlessTest.cpp  PlasmaRecordMe.cpp  PlasmaRecordMe.h  RecordMe.cpp  RecordMe.h  main.cpp  main.qml  recordme.qrc  screencasting.cpp  screencasting.h  screencastingrequest.cpp  webcamtest.qml  xdp-main.cpp
